--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header {
     font-family: "Courier New", monospace;
 }
 
-ul {
+ol {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -19,20 +19,36 @@ ul {
     font-family: copperplate;
   }
   
-  ul li a {
+  ol li a {
     display: block;
     color: white;
     padding: 14px 16px;
     text-decoration: none;
   }
   
-  ul li a:hover {
+  ol li a:hover {
     background-color: grey;
   }
-  ul li a.active {
+  ol li a.active {
     background-color: blue;
+  }
+  ol li a:visited{
+    color: white;
   }
   body {
     background-color: gray;
     font-family: "Courier New", monospace;
+  }
+
+  h1 {
+    color: white;
+    font-family: copperplate;
+    text-align: center;
+  }
+
+  ul a:link {
+    color:black;
+  }
+  ul a:visited{
+    color: black;
   }
